--- a/contents/style/pages/css/pages.css
+++ b/contents/style/pages/css/pages.css
@@ -1794,7 +1794,7 @@ body {
   background-size: cover;
 
 
-  color: #626262;
+  color: #FFFFFF;
   font-family: "Segoe UI", Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -1820,7 +1820,7 @@ h6 {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   font-weight: 300;
-  color: #2c2c2c;
+  color: #FFFFFF;
 }
 h1 {
   font-size: 44px;
@@ -1830,6 +1830,7 @@ h1 {
 h2 {
   font-size: 31px;
   line-height: 40px;
+  color: #000000;
 }
 h3 {
   font-size: 27px;
