--- a/contents/deck/view.jade
+++ b/contents/deck/view.jade
@@ -1,4 +1,16 @@
 h3 Deck View
+
+#demo(style='margin-bottom: 100px;')
+  .container(style='background-color: rgba(34, 29, 2, 0.5);')
+    .row
+      .span12
+        #owl-demo.owl-carousel
+            each item in data
+                if item.mult_id > 0
+                  .item
+                    img(src="https://api.mtgdb.info/content/hi_res_card_images/" + item.mult_id + ".jpg", alt='Owl Image', height=333, onError="this.src = '/mtgdeckbuilder/cards/Magic_Card_Back.png'")
+                  
+
 table.table.table-striped
     thead
         tr
@@ -7,8 +19,24 @@ table.table.table-striped
         each item in data
             tr
                 if item.mult_id > 0
-                    script.
-                        //var cardObj = !{JSON.stringify(item)};
-                        //console.log("Card object: ", cardObj);
+                    
                     button.btn.btn-primary(onClick='deck.removeCard(#{JSON.stringify(item)})')
                         img(src="https://api.mtgdb.info/content/hi_res_card_images/" + item.mult_id + ".jpg", height=333, onError="this.src = '/mtgdeckbuilder/cards/Magic_Card_Back.png'")
+
+script(src='owl.carousel/assets/js/jquery-1.9.1.min.js')
+script(src='owl.carousel/owl-carousel/owl.carousel.js')
+script.
+  $(document).ready(function() {
+  $("#owl-demo").owlCarousel({
+  autoPlay: 5000,
+  items : 4,
+  itemsDesktop : [1199,3],
+  itemsDesktopSmall : [979,3]
+  });
+  });
+//script(src='owl.carousel/demo.js')
+script(src='owl.carousel/assets/js/bootstrap-collapse.js')
+script(src='owl.carousel/assets/js/bootstrap-transition.js')
+script(src='owl.carousel/assets/js/bootstrap-tab.js')
+script(src='owl.carousel/assets/js/google-code-prettify/prettify.js')
+script(src='owl.carousel/assets/js/application.js')
