--- a/contents/owl.carousel/assets/css/bootstrapTheme.css
+++ b/contents/owl.carousel/assets/css/bootstrapTheme.css
@@ -92,7 +92,7 @@ img {
   width: auto\9;
   /* IE7-8 need help adjusting responsive images */
 
-  height: auto;
+  /*height: auto;*/
   /* Part 2: Scale the height according to the width, otherwise you get stretching */
 
   vertical-align: middle;
@@ -205,10 +205,10 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
   font-size: 16px;
   line-height: 22px;
-  color: #869690;
+  color: white;
   background-color: #ffffff;
 }
 a {
@@ -240,6 +240,7 @@ a:focus {
   border-radius: 500px;
 }
 .row {
+  margin-bottom: 20px;
   margin-left: -20px;
   *zoom: 1;
 }
@@ -937,7 +938,7 @@ input[type="color"],
   margin-bottom: 11px;
   font-size: 16px;
   line-height: 22px;
-  color: #555555;
+  color: #FCF9F9;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -946,7 +947,7 @@ input[type="color"],
 input,
 textarea,
 .uneditable-input {
-  width: 206px;
+  /*width: 206px;*/
 }
 textarea {
   height: auto;
@@ -968,7 +969,7 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   background-color: #ffffff;
-  border: 1px solid #cccccc;
+  border: 2px solid #D0B116;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1004,7 +1005,7 @@ input[type="color"]:focus,
 }
 input[type="radio"],
 input[type="checkbox"] {
-  margin: 4px 0 0;
+  /*margin: 4px 0 0;*/
   *margin-top: 0;
   /* IE7 */
 
@@ -1034,8 +1035,8 @@ input[type="file"] {
 }
 select {
   width: 220px;
-  border: 1px solid #cccccc;
-  background-color: #ffffff;
+  /*border: 1px solid #cccccc;*/
+  background-color: black;
 }
 select[multiple],
 select[size] {
@@ -1741,9 +1742,9 @@ table {
   border-top: 1px solid #ffffff;
 }
 .table td {
-  //background: #f5f5f5;
+  /*//background: #f5f5f5;
   background: #FFF;
-  border-top: 1px solid #E0E0E0;
+  border-top: 1px solid #E0E0E0;*/
 }
 .table th {
   font-weight: bold;
