--- a/contents/owl.carousel/assets/css/custom.css
+++ b/contents/owl.carousel/assets/css/custom.css
@@ -1,27 +1,12 @@
 #owl-demo .item{
-        background: #3fbf79;
-        padding: 30px 0px;
-        margin: 10px;
-        color: #FFF;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        text-align: center;
+        margin: 3px;
     }
     
-.customNavigation{
-  text-align: center;
+#owl-demo .item img{
+    display: block;
+    /*width: 100%;
+    height: auto;*/
 }
-
-.customNavigation a{
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
 /* Owl Carousel Bootstrap Custom CSS */
 
 /* Header Navigation */
@@ -96,9 +81,6 @@ img.arrow-down{
 	margin: 0 auto;
 	display: block;
 }
-/*h1{
-	margin-top: 80px;
-}*/
 
 pre.pre-show{
 	margin: 40px 0px;
